docs/evidence/core-object-shape/object-shape-geometry.log
file:///home/runner/work/NexusEngine/NexusEngine/src/core-kits/core-object-shape-kit/index.js:8
  createObjectShapeQualification,
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: The requested module './descriptors.js' does not provide an export named 'createObjectShapeQualification'
    at #asyncInstantiate (node:internal/modules/esm/module_job:327:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:431:5)
    at async node:internal/modules/esm/loader:643:26
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.18.0
